--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
   <section id="main">
     <canvas id="game-canvas"></canvas>
+    <fieldset>
+      <input type='range' name='speed.modifier' id='speed' min="0" max="5" step="0.1" orient="vertical" value="0.1" style="appearance: slider-vertical;"/>
+      <input type='range' name='player.collision' id='collision' min="0" max="50" step="1" orient="vertical" value="10" style="appearance: slider-vertical;"/>
+    </fieldset>
   </section>
-  <section id="preload"></section>
+  <section id="preload">
+
+    <object
+      type="image/svg+xml" 
+      data="/assets/tracks/track-prototype.svg">
+    </object>
+  </section>
 </body>
 </html>
