--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <object
       type="image/svg+xml" 
-      data="https://raw.githubusercontent.com/ikbensiep/simple-pathfinder/main/assets/tracks/track-prototype.svg">
+      data="./assets/tracks/track-prototype.svg">
     </object>
   </section>
 </body>
